# thunder-forge

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
olla/: compose.yaml  olla.yaml
scripts/: setup_env.py
src/: main.py
src/api/: mini_app.py  webhook.py
src/bot/: app.py
src/services/: access_service.py  auth_service.py  config_service.py  hosts_service.py  monitor_service.py  ssh_service.py  tbnet_service.py
src/src/: main.py
src/static/mini_app/: app.js  index.html  translations.json
src/thunder_forge/: cli.py
tests/contract/: test_mini_app_status.py
tests/unit/: test_auth_service.py  test_hosts_service.py
